--- a/mod/feeder/Makefile
+++ b/mod/feeder/Makefile
@@ -1,4 +1,4 @@
-src/tarantool.o: CFLAGS += -DUTILITY
+# src/tarantool.o: CFLAGS += -DUTILITY
 
 obj += mod/feeder/feeder.o
 cfg_tmpl += mod/feeder/feeder_cfg.cfg_tmpl
