Get rid of sh wrapper of logger

--- a/test/basic.cfg
+++ b/test/basic.cfg
@@ -2,7 +2,7 @@ pid_file = <%= @pid_file or '"tarantool.pid"' %>
 
 slab_alloc_arena = <%= @slab_alloc_arena or 0.1 %>
 
-logger = "cat - >> tarantool.log"
+logger = "exec cat - >> tarantool.log"
 log_level = 5
 
 primary_port = <%= @primary_port or 33013 %>
