--- a/src/Makefile
+++ b/src/Makefile
@@ -7,6 +7,7 @@ obj += src/coro.o
 obj += src/fiber.o
 obj += src/iproto.o
 obj += src/log_io.o
+obj += src/log_io_writers.o
 obj += src/log_io_recovery.o
 obj += src/palloc.o
 obj += src/pickle.o
