Check for strdupa

--- a/include/config.h.in
+++ b/include/config.h.in
@@ -96,6 +96,9 @@
 /* Define to 1 if you have the <stdlib.h> header file. */
 #undef HAVE_STDLIB_H
 
+/* Define to 1 if strdupa provided */
+#undef HAVE_STRDUPA
+
 /* Define to 1 if you have the <strings.h> header file. */
 #undef HAVE_STRINGS_H
 
