Full mesh interconnect

--- a/src/Makefile
+++ b/src/Makefile
@@ -18,6 +18,7 @@ obj += src/tarantool_ev.o
 obj += src/tbuf.o
 obj += src/util.o
 obj += src/assoc.o
+obj += src/full_mesh.o
 obj += src/tarantool.o
 
 ifeq (1,$(HAVE_RAGEL))
