Drop _cfg suffix

--- a/cfg/Makefile
+++ b/cfg/Makefile
@@ -1,27 +1,27 @@
 obj += cfg/warning.o
-obj += cfg/tarantool_cfg.o
+obj += cfg/tarantool.o
 
 ifeq (1, $(HAVE_CONFETTI))
-    dist-clean += cfg/tarantool_cfg.h
-    dist-clean += cfg/tarantool_cfg.c
-    dist-clean += cfg/tarantool_cfg.cfg
-    dist-clean += cfg/tarantool_cfg.cfg_tmpl
+    dist-clean += cfg/tarantool.h
+    dist-clean += cfg/tarantool.c
+    dist-clean += cfg/tarantool.cfg
+    dist-clean += cfg/tarantool.cfg_tmpl
 
-    dist += cfg/tarantool_cfg.h
-    dist += cfg/tarantool_cfg.c
-    dist += cfg/tarantool_cfg.cfg
+    dist += cfg/tarantool.h
+    dist += cfg/tarantool.c
+    dist += cfg/tarantool.cfg
 
-    defered += $$(obj): cfg/tarantool_cfg.h cfg/tarantool_cfg.cfg
+    defered += $$(obj): cfg/tarantool.h cfg/tarantool.cfg
 
-    cfg/tarantool_cfg.cfg_tmpl: cfg/core_cfg.cfg_tmpl $(cfg_tmpl) Makefile
+    cfg/tarantool.cfg_tmpl: cfg/core.cfg_tmpl $(cfg_tmpl) Makefile
 	@mkdir -p $(dir $@)
 	@echo '%{ ' > $@
 	@echo "#include <third_party/confetti/prscfg.h>" >> $@
-	@echo "#include <cfg/tarantool_cfg.h>" >> $@
+	@echo "#include <cfg/tarantool.h>" >> $@
 	@echo "void out_warning(ConfettyError r, char *format, ...);" >> $@
 	@echo '%}' >> $@
 	$(CAT) $(filter-out Makefile,$^) >> $@
 endif
 
-obj += cfg/tarantool_cfg.o
-disable-warns-obj += cfg/tarantool_cfg.o
+obj += cfg/tarantool.o
+disable-warns-obj += cfg/tarantool.o
