--- a/test/basic.cfg
+++ b/test/basic.cfg
@@ -2,7 +2,6 @@ pid_file = <%= @pid_file or '"tarantool.pid"' %>
 
 slab_alloc_arena = <%= @slab_alloc_arena or 0.1 %>
 
-logger = "exec cat - >> tarantool.log"
 log_level = 5
 
 primary_port = <%= @primary_port or 33013 %>
@@ -12,4 +11,4 @@ admin_port = <%= @admin_port or 33015 %>
 wal_fsync_delay = <%= @wal_fsync_delay or 0.1 %>
 
 rows_per_wal = <%= @rows_per_wal or 5000 %>
-
+coredump = 0.00017
