s/tarantool/octopus/ darcs-patches: H4sIAAAAAAAAA53RSwrCQAwG4L2nmAv0sRHq0kUvociQSaNWppOSSYt4ei11KUi6SiB8fwJpndAYAcmVVRasGJXHKZeDOx+LExSvujhcnIJAUubovvNd+9t5ms10hCfbF2YFNSNN6jk87E4+vVlN2kcTUspa1bVfqg+QeywlmP1+9QMNCHinbktGs2bIlDzKlivW6/F6s8LYh+W3qYPIiTyl+e/2NwonWfDEAgAA

--- a/.gitignore
+++ b/.gitignore
@@ -6,12 +6,12 @@ lcov
 *.o
 *.d
 *.pd
-cfg/tarantool_*_cfg.*
+cfg/octopus_*_cfg.*
 *.snap
 *.xlog
 mod/silverbox/memcached.c
 src/admin.c
-tarantool_version.h
+octopus_version.h
 autom4te.cache
 config.*
 configure
