--- a/test/basic.cfg
+++ b/test/basic.cfg
@@ -1,4 +1,4 @@
-pid_file = <%= @pid_file or '"tarantool.pid"' %>
+pid_file = <%= @pid_file or '"octopus.pid"' %>
 
 slab_alloc_arena = <%= @slab_alloc_arena or 0.1 %>
 
