--- a/mod/box/Makefile
+++ b/mod/box/Makefile
@@ -19,5 +19,6 @@ ifeq (1,$(HAVE_RAGEL))
 	dist += mod/box/memcached.m
 endif
 
+cfg_tmpl += cfg/log_io.cfg_tmpl
 cfg_tmpl += mod/box/box.cfg_tmpl
 cfg_tmpl += cfg/paxos.cfg_tmpl
