--- a/Makefile.in
+++ b/Makefile.in
@@ -143,7 +143,7 @@ else
 ifeq (1,$(HAVE_GIT))
 octopus_version.h: FORCE
 	@echo -n 'const char octopus_version_string[] = "' > $@_
-	@$(GIT) describe HEAD | tr -d \\n >> $@_
+	@$(GIT) describe --always HEAD | tr -d \\n >> $@_
 	@echo '";' >> $@_
 	@diff -q $@ $@_ 2>/dev/null >/dev/null || (echo "GEN	$(notdir $@)"; cp $@_ $@)
 	@rm $@_
