--- a/doc/example.cfg
+++ b/doc/example.cfg
@@ -10,8 +10,8 @@ slab_alloc_arena = 2.5
 # fsync XLog every 0.5 seconds
 wal_fsync_delay = 0.5
 
-# trade latency to higher throughput
-io_collect_interval = 0.001
+# uncomment to trade latency for higher throughput
+# io_collect_interval = 0.001
 
 # limit rate of snaphot writing to 50MB/sec
 snap_io_rate_limit = 50.0
